--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,6 +1,9 @@
-# PDBX_MMCIF_UTILS HISTORY
+# PDBX_MMCIF HISTORY
 
-1-Aug-2017  - Initial GitHub Migration
+ 1-Aug-2017  - Initial Git Migration
+15-Jan-2018  - Python packaging overhaul
+ 4-Apr-2018  - V012 - remove some deprecated code and a few api extensions
+
 
 
 
