--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -5,6 +5,9 @@
  4-Apr-2018  - V012 - remove some deprecated code and a few api extensions
 26-Jun-2018  - V013 - add missing method code accessors
  9-Jul-2018  - V014 - preliminary Py37 support, add coverage and code style tests
+26-Jul-2018  - V015 - further changes to support Py2/Py3 compatibility in dictionar API module
+ 6-Aug-2018  - V016 - Add methods to set and get generic properties on base containers.
+ 8-Aug-2018  - V017 - Add support for Ubuntu  16.04.5 & GCC 5.4
 
 
 
