--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -9,6 +9,7 @@
  6-Aug-2018  - V016 - Add methods to set and get generic properties on base containers.
  8-Aug-2018  - V017 - Add support for Ubuntu  16.04.5 & GCC 5.4
 10-Aug-2018  - V018 - Detect uncompress gz, bz2, xz and zip input files
+25-Aug-2028  - V019 - Record the compressed file names and fix tox coverage test runner
 
 
 
