Update docs and dependencies

--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -13,6 +13,7 @@
  9-Sep-2018  - V020 - Adjust return types for failing Container and DataCategory methods
                       Add implicit method execution priority based method order in category method_list.
  4-Oct-2018  - V021 - Add optional method parameter returnCount=0 to selectValueListWhere()
+12-Oct-2018    V022 - Update language binding code
 
 
 
