V027 - Add explicit option to better control read encoding errors distinct from ascii encoding errors.

--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -19,6 +19,7 @@
 11-Nov-2018  - V025 - Update DataCategory/DataCategoryBase with more consistent handling of raiseExceptions flag,
                       and harmonize selection of temporary and log file paths.
 27-Nov-2018  - V026 - Adjust exception handling in IoCoreAdapter().
+29-Nov-2018. - V027 - Add explicit option to better control read encoding errors separate from ascii encoding errors.
 
 
 
