--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -20,7 +20,8 @@
                       and harmonize selection of temporary and log file paths.
 27-Nov-2018  - V026 - Adjust exception handling in IoCoreAdapter().
 29-Nov-2018. - V027 - Add explicit option to better control read encoding errors separate from ascii encoding errors.
-
+ 7-Dec-2018    V028 - Add constructor parameter replaceDefinition=False to allow replacing
+                      defintions during consolidation
 
 
 
