Add row dictionary initialization, append, and extend methods.

--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -22,6 +22,7 @@
 29-Nov-2018. - V027 - Add explicit option to better control read encoding errors separate from ascii encoding errors.
  7-Dec-2018    V028 - Add constructor parameter replaceDefinition=False to allow replacing
                       defintions during consolidation
+28-Jan-2019    V029 - Add row dictionary initialization, append, and extend methods
 
 
 
