V033 Adjust initialization error checking to allow empty list

--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -25,6 +25,8 @@
 27-Jan-2019    V029 - Add row dictionary initialization, append, and extend methods
 28-Jan-2019    V030 - Relax attribute coverage requirements on dictionary initialization
  2-Feb-2019    V031 - Adjust formatting removing spurious comments and newlines and API method getFullDecendentList()
+ 5-Feb-2019    V032 - Add container merge method.
+ 7-Feb-2019    V033 - Adjust initialization error checking to allow empty list
 
 
 
