--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -27,6 +27,6 @@
  2-Feb-2019    V031 - Adjust formatting removing spurious comments and newlines and API method getFullDecendentList()
  5-Feb-2019    V032 - Add container merge method.
  7-Feb-2019    V033 - Adjust initialization error checking to allow empty list
-
+12-Feb-2019    V034 - Back off some reformatting from V32.
 
 
