--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -31,5 +31,6 @@
 11-Mar-2019    V035 - Add method getAttributeUniqueValueList().
 12-Apr-2019    V036 - Add dictionary api methods getItemSubCategoryLabelList() and  getItemSubCategoryList()
  5-May-2019    V037 - Add selectValuesWhereConditions() and countValuesWhereConditions()
+26-May-2019    V038 - Extend method API to support DDL 2.2.1 extensions
 
 
