--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -33,5 +33,4 @@
  5-May-2019    V037 - Add selectValuesWhereConditions() and countValuesWhereConditions()
 26-May-2019    V038 - Extend method API to support DDL 2.2.1 extensions
  5-Jun-2019    V039 - Incorporate DictMethodRunner class change test naming conventions
-
-
+28-Jun-2019    V040 - Update development workflows and cleanup
