Update arguments in DictMethodRunner()

--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -34,3 +34,4 @@
 26-May-2019    V038 - Extend method API to support DDL 2.2.1 extensions
  5-Jun-2019    V039 - Incorporate DictMethodRunner class change test naming conventions
 28-Jun-2019    V040 - Update development workflows and cleanup
+22-Jul-2019    V041 - Update arguments in DictMethodRunner()
