--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -36,3 +36,4 @@
 28-Jun-2019    V040 - Update development workflows and cleanup
 22-Jul-2019    V041 - Update arguments in DictMethodRunner()
 28-Jul-2019    V042 - Suppress sorting of attribute and category order in DictionaryApi()
+ 7-Aut-2019    V043 - Suppress raising exceptions for getValueOrDefault() methods.
