--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -41,3 +41,4 @@
 16-Aug-2019    V045 - Improve handling of dictionary and dictionary history categories for concatenated dictionaries.
 28-Aug-2019    V046 - Add unique identifier properties to each container
  7-Oct-2019    V047 - Adjust error handling in IoAdapterCore()
+ 7-Oct-2019    V048 - Exclude setup.py to avoid odd pylint crash.
