--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -43,3 +43,4 @@
  7-Oct-2019    V047 - Adjust error handling in IoAdapterCore()
  7-Oct-2019    V048 - Exclude setup.py to avoid odd pylint crash.
 23-Nov-2019    V049 - Move pipeline to py38
+29-Nov-2019    V050 - Improve error diagnostics for missing methods, adjust parameter values for block methods.
