--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -46,3 +46,4 @@
 29-Nov-2019    V050 - Improve error diagnostics for missing methods, adjust parameter values for block methods.
 15-Feb-2020    V051 - Add support for category group hierarchies.
  9-May-2020    V052 - Make reserved token quoting case insensitive (PR from E. Ezra Peisach)
+18-May-2020    V053 - Add DataCatagory method countValuesWhereOpConditions() and test cases.
