V055 - Add support for extended enumeration description and units

--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -48,3 +48,4 @@
  9-May-2020    V052 - Make reserved token quoting case insensitive (PR from E. Ezra Peisach)
 18-May-2020    V053 - Add DataCatagory method countValuesWhereOpConditions() and test cases.
 18-May-2020    V054 - Add DataCatagory another method getCombinationCountsWithConditions() and test cases.
+ 5-Jun-2020    V055 - Add support for extended enumeration description and units
