V056 - Address Py27 compatibility issues

--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -49,3 +49,4 @@
 18-May-2020    V053 - Add DataCatagory method countValuesWhereOpConditions() and test cases.
 18-May-2020    V054 - Add DataCatagory another method getCombinationCountsWithConditions() and test cases.
  5-Jun-2020    V055 - Add support for extended enumeration description and units
+ 5-Jun-2020    V056 - Address Py27 compatibility issues
