--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -53,3 +53,4 @@
  5-Jun-2020    V057 - Extend support for extended enumeration description and units for alt enumerations
 23-Aug-2020    V058 - Adjustments for the latest pylint and installation of dependencies for documentation generator
 23-Aug-2020    V059 - Py27 adjustments
+ 1-Jan-2021    V060 - Advance pipeline to py39 add DDL category.NX_mapping_details
