--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -60,3 +60,4 @@
  7-Apr-2021    V0.63 - Add support for conditional value and conditional link attributes and data
  8-Apr-2021    V0.64 - Add --cleanup option to build_dict_cli, update documentation and dependencies.
  8-Apr-2021    V0.65 - Make --cleanup work with nested include instructions
+17-Apr-2021    V0.66 - Add support for reading remote text and gzipped files in IoPyAdapter()
