--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -63,3 +63,4 @@
 17-Apr-2021    V0.66 - Add support for reading remote text and gzipped files in IoPyAdapter()
 17-Apr-2021    V0.67 - Update support for Py27 with IoPyAdapter() tests
 10-May-2021    V0.68 - Extend time precision in IoAdapterBase()
+16-May-2021    V0.69 - Add BinaryCifReader/BinaryCifWriter, add mkdocs support, overhaul setup.py
