--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -67,3 +67,4 @@
  2-Jun-2021    V0.70 - Add removeDuplicateRows() method in DataCategoryBase()
 21-Jul-2021    V0.71 - Update ccp-cif-file module with support for new DDL attributes.
 21-Jul-2021    V0.72 - Improve error handling for remote cif reader in IoAdapterPy()
+28-Sep-2021    V0.73 - Ignore decoding errors on read by default in IoAdapterPy.readFile()
