--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -69,3 +69,4 @@
 21-Jul-2021    V0.72 - Improve error handling for remote cif reader in IoAdapterPy()
 28-Sep-2021    V0.73 - Ignore decoding errors on read by default in IoAdapterPy.readFile()
  5-Oct-2021    V0.74 - Add support for relative local paths with DictionaryInclude()
+11-Oct-2021    V0.75 - Add the dictionary API instance as a keyword argument to any invoked method in DictMethodRunner()
