--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -71,3 +71,4 @@
  5-Oct-2021    V0.74 - Add support for relative local paths with DictionaryInclude()
 11-Oct-2021    V0.75 - Add the dictionary API instance as a keyword argument to any invoked method in DictMethodRunner()
 06-Apr-2022    V0.76 - Add doubleQuotingFlag parameter in IoAdapterCore.writeFile() method
+08-Aug-2022    V0.77 - Upgrade macOS version for Azure and tox tasks
