--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -75,3 +75,4 @@
 04-Sep-2022    V0.78 - Ensure that data values starting with "stop_" are quoted. Pull in latest versions of modules.
 05-Sep-2022    V0.79 - For IoAdapterPy readFile() method, support timeout parameter for remote URLs
 04-Dec-2022    V0.80 - Add support for Python 3.11
+04-Dec-2022    V0.80.1 - Correct non-wheel build of legacy python
