--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -76,3 +76,4 @@
 05-Sep-2022    V0.79 - For IoAdapterPy readFile() method, support timeout parameter for remote URLs
 04-Dec-2022    V0.80 - Add support for Python 3.11
 04-Dec-2022    V0.80.1 - Correct non-wheel build of legacy python
+08-Apr-2023    V0.81 - When using C++ writer, a string with a tab in middle with no other whitespace must be quoted
