--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -77,3 +77,4 @@
 04-Dec-2022    V0.80 - Add support for Python 3.11
 04-Dec-2022    V0.80.1 - Correct non-wheel build of legacy python
 08-Apr-2023    V0.81 - When using C++ writer, a string with a tab in middle with no other whitespace must be quoted
+30-Oct-2023    V0.82 - Add support for binary mmCIF (BCIF) reading and writing in IoAdapterPy and IoAdapterCore
