--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -78,3 +78,4 @@
 04-Dec-2022    V0.80.1 - Correct non-wheel build of legacy python
 08-Apr-2023    V0.81 - When using C++ writer, a string with a tab in middle with no other whitespace must be quoted
  5-Dec-2023    V0.82 - Add support for binary mmCIF (BCIF) reading and writing in IoAdapterPy
+21-Dec-2023    V0.83 - Update wheel builds for Apple Silicon (arm64).
