--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -84,3 +84,4 @@
                          Update BinaryCifWriter to set version tag to that of the active mmcif package installation,
                          to enable compatibility with Mol* and other tools (which requires >= 0.3.0, in that format);
                          Update package version format to `major.minor.patch` (!!! MUST USE THIS FORMAT MOVING FORWARD !!!)
+17-Jan-2024    V0.85.1 - Set BinaryCIF version tag to specifically 0.3.0 to ensure compatibility with Mol* and other tools
