--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -91,3 +91,4 @@
 24-Apr-2024    V0.88.0 - Add copy method to PdbxContainers for copying entire categories;
                          Update rename method to fail if new category name already exists (i.e., don't allow overwrite)
 20-Jun-2024    V0.89.0 - When writing output cif, always quote strings that start global_
+25-Oct-2024    V0.90.0 - Use explicit item type map to determine field types and encodings for BCIF
