--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -97,3 +97,5 @@
  7-May-2025    V0.92.0 - BinaryCIF ByteArray Encoder failed to use the provided
                          array type in recorded output type.  Warn deprecation of
 			 obsolete encoders
+12-Jun-2025    V0.93.0 - Remove support for python 2.X, retain support for python 3.6 and newer
+
